--- a/GawaNativeGettingStarted/MainPage.xaml
+++ b/GawaNativeGettingStarted/MainPage.xaml
@@ -8,12 +8,11 @@
     xmlns:local="clr-namespace:GawaNativeGettingStarted;assembly=GawaNativeGettingStarted"
     xmlns:effect="clr-namespace:GawaNativeGettingStarted"
     x:Class="GawaNativeGettingStarted.MainPage">
-    <StackLayout Orientation="Vertical" BackgroundColor="#66BB6A">                
-        <StackLayout.Effects>                    
-            <effect:SafeAreaPaddingEffect />                
+    <StackLayout Orientation="Vertical" BackgroundColor="#66BB6A">
+        <StackLayout.Effects>
+            <effect:SafeAreaPaddingEffect />
         </StackLayout.Effects>
-        <local:GNWebView
-            BackgroundColor="Aqua"
+        <WebView
             HorizontalOptions="FillAndExpand"
             VerticalOptions="FillAndExpand"
             Source="https://eeaab7d6.ngrok.io"/>
