--- a/GawaNativeGettingStarted.Android/Resources/drawable/splash.axml
+++ b/GawaNativeGettingStarted.Android/Resources/drawable/splash.axml
@@ -1,3 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
-</LinearLayout>
+<layer-list
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:opacity="opaque"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <item
+        android:drawable="@color/colorPrimaryDark"/>
+</layer-list>
